<resources>
    <string name="app_name">Stocks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">VERIPARK</string>
    <string name="nav_header_subtitle">IMKB Hisse Senetleri/Endeksler</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hisse_ve_endeksler">Hisse ve Endeksler</string>
    <string name="yukselenler">Yükselenler</string>
    <string name="dusenler">Düşenler</string>
    <string name="hacme_gore_30">Hacme Göre - 30</string>
    <string name="hacme_gore_50">Hacme Göre - 50</string>
    <string name="hacme_gore_100">Hacme Göre - 100</string>
    <string name="veripark">veripark</string>
    <string name="symbol">Sembol</string>
    <string name="symbol_colon">Sembol:\u0020</string>

    <string name="price">Fiyat</string>
    <string name="price_colon">Fiyat:\u0020</string>

    <string name="difference">Fark</string>
    <string name="difference_colon">Fark:\u0020</string>

    <string name="volume">Hacim</string>
    <string name="volume_colon">Hacim:\u0020</string>

    <string name="buying">Alış</string>
    <string name="buying_colon">Alış:\u0020</string>

    <string name="selling">Satış</string>
    <string name="selling_colon">Satış:\u0020</string>

    <string name="change">Değişim</string>
    <string name="change_colon">Değişim:\u0020</string>

    <string name="search">Ara</string>
    <string name="search_colon">Ara:\u0020</string>
    <string name="daily_low_colon">"Günlük Düşük: "</string>
    <string name="daily_high_colon">"Günlük Yüksek: "</string>
    <string name="amount_colon">"Adet: "</string>
    <string name="ceiling_colon">"Tavan: "</string>
    <string name="base_colon">"Taban: "</string>
    <string name="stock_details">Stock Details</string>
    <string name="android">Android</string>

</resources>