<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_hisse_ve_endeksler">

    <fragment
        android:id="@+id/nav_hisse_ve_endeksler"
        android:name="com.twenk11k.stocks.ui.fragment.FragmentStocks"
        android:label="@string/hisse_ve_endeksler"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_yukselenler"
        android:name="com.twenk11k.stocks.ui.fragment.FragmentStocks"
        android:label="@string/yükselenler"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_dusenler"
        android:name="com.twenk11k.stocks.ui.fragment.FragmentStocks"
        android:label="@string/dusenler"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_hacme_gore_30"
        android:name="com.twenk11k.stocks.ui.fragment.FragmentStocks"
        android:label="@string/hacme_gore_30"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_hacme_gore_50"
        android:name="com.twenk11k.stocks.ui.fragment.FragmentStocks"
        android:label="@string/hacme_gore_50"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_hacme_gore_100"
        android:name="com.twenk11k.stocks.ui.fragment.FragmentStocks"
        android:label="@string/hacme_gore_100"
        tools:layout="@layout/fragment_home" />

</navigation>