<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_3"
    android:padding="8dp">

    <TextView
        android:id="@+id/text_symbol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/adapter_item_text_margin"
        android:layout_marginRight="@dimen/adapter_item_text_margin"
        android:maxLines="1"
        android:text="@string/symbol"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_price"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/adapter_item_text_margin"
        android:layout_marginRight="@dimen/adapter_item_text_margin"
        android:maxLines="1"
        android:text="@string/price"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_difference"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/text_symbol"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_difference"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/difference"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_volume"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/text_price"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_volume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/adapter_item_text_margin"
        android:layout_marginRight="@dimen/adapter_item_text_margin"
        android:maxLines="1"
        android:text="@string/volume"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_buying"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/text_difference"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_buying"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/adapter_item_text_margin"
        android:layout_marginRight="@dimen/adapter_item_text_margin"
        android:maxLines="1"
        android:text="@string/buying"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_selling"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/text_volume"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_selling"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/adapter_item_text_margin"
        android:layout_marginRight="@dimen/adapter_item_text_margin"
        android:maxLines="1"
        android:text="@string/selling"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_change"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/text_buying"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_change"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/adapter_item_text_margin"
        android:layout_marginRight="@dimen/adapter_item_text_margin"
        android:maxLines="1"
        android:text="@string/change"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/text_selling"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>