<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="item"
            type="com.twenk11k.stocks.model.Stock" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="?attr/selectableItemBackground"
        xmlns:app="http://schemas.android.com/apk/res-auto" >

        <TextView
            android:id="@+id/text_symbol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:maxLength="6"
            android:maxLines="1"
            android:layout_marginLeft="@dimen/adapter_item_text_margin"
            android:layout_marginRight="@dimen/adapter_item_text_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_price"
            android:text="@string/symbol" />

        <TextView
            android:id="@+id/text_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:maxLines="1"
            android:layout_marginLeft="@dimen/adapter_item_text_margin"
            android:layout_marginRight="@dimen/adapter_item_text_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/text_difference"
            app:layout_constraintStart_toEndOf="@id/text_symbol"
            android:text="@string/price" />

        <TextView
            android:id="@+id/text_difference"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/text_volume"
            app:layout_constraintStart_toEndOf="@+id/text_price"
            android:text="@string/difference" />

        <TextView
            android:id="@+id/text_volume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:maxLines="1"
            android:layout_marginLeft="@dimen/adapter_item_text_margin"
            android:layout_marginRight="@dimen/adapter_item_text_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toStartOf="@id/text_buying"
            app:layout_constraintStart_toEndOf="@+id/text_difference"
            android:text="@string/volume" />

        <TextView
            android:id="@+id/text_buying"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:maxLines="1"
            android:layout_marginLeft="@dimen/adapter_item_text_margin"
            android:layout_marginRight="@dimen/adapter_item_text_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/text_selling"
            app:layout_constraintStart_toEndOf="@+id/text_volume"
            android:text="@string/buying" />

        <TextView
            android:id="@+id/text_selling"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:maxLines="1"
            android:layout_marginLeft="@dimen/adapter_item_text_margin"
            android:layout_marginRight="@dimen/adapter_item_text_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/image_change"
            app:layout_constraintStart_toEndOf="@+id/text_buying"
            android:text="@string/selling" />

        <ImageView
            android:id="@+id/image_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:maxLines="1"
            android:layout_marginRight="@dimen/adapter_item_text_margin"
            android:layout_marginLeft="@dimen/adapter_item_text_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_selling"
            android:src="@drawable/baseline_keyboard_arrow_up_black_18"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
